--- a/node-api/package.json
+++ b/node-api/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
     "mongoose": "^5.9.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuidv1": "^1.6.14"
   }
 }
